// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RealTimeProvider /> should handle callback 1`] = `
<RealTimeProvider
  connector={
    Object {
      "subscribe": [Function],
      "unsubscribe": [Function],
    }
  }
>
  <RealTimeChannel
    name="test"
  >
    <RealTimeEventListener(MyComponent)
      id={45}
      name="Hello World"
    >
      <MyComponent
        id={45}
        name="Hello World"
      >
        <span>
          Test
        </span>
      </MyComponent>
    </RealTimeEventListener(MyComponent)>
  </RealTimeChannel>
</RealTimeProvider>
`;

exports[`<RealTimeProvider /> should handle callback 2`] = `
<RealTimeProvider
  connector={
    Object {
      "subscribe": [Function],
      "unsubscribe": [Function],
    }
  }
>
  <RealTimeChannel
    name="test"
  >
    <RealTimeEventListener(MyComponent)
      id={45}
      name="Hello World"
    >
      <MyComponent
        id={45}
        name="Hello World"
      >
        <span>
          Test
        </span>
      </MyComponent>
    </RealTimeEventListener(MyComponent)>
  </RealTimeChannel>
</RealTimeProvider>
`;

exports[`<RealTimeProvider /> should handle callback 3`] = `
<RealTimeProvider
  connector={
    Object {
      "subscribe": [Function],
      "unsubscribe": [Function],
    }
  }
>
  <RealTimeChannel
    name="test"
  >
    <RealTimeEventListener(MyComponent)
      id={45}
      name="Hello World"
    >
      <MyComponent
        id={45}
        name="Hello World"
      >
        <span>
          Test
        </span>
      </MyComponent>
    </RealTimeEventListener(MyComponent)>
  </RealTimeChannel>
</RealTimeProvider>
`;

exports[`<RealTimeProvider /> should handle callback 4`] = `
<RealTimeProvider
  connector={
    Object {
      "subscribe": [Function],
      "unsubscribe": [Function],
    }
  }
>
  <RealTimeChannel
    name="test"
  >
    <RealTimeEventListener(MyComponent)
      id={45}
      name="Hello World"
    >
      <MyComponent
        id={45}
        name="Hello World"
      >
        <span>
          Test
        </span>
      </MyComponent>
    </RealTimeEventListener(MyComponent)>
  </RealTimeChannel>
</RealTimeProvider>
`;

exports[`<RealTimeProvider /> should handle callback 5`] = `
<RealTimeProvider
  connector={
    Object {
      "subscribe": [Function],
      "unsubscribe": [Function],
    }
  }
>
  <RealTimeChannel
    name="test"
  >
    <RealTimeEventListener(MyComponent)
      id={45}
      name="Hello World"
    >
      <MyComponent
        id={45}
        name="Hello World"
      >
        <span>
          Test
        </span>
      </MyComponent>
    </RealTimeEventListener(MyComponent)>
  </RealTimeChannel>
</RealTimeProvider>
`;

exports[`<RealTimeProvider /> should handle callback 6`] = `
<RealTimeProvider
  connector={
    Object {
      "subscribe": [Function],
      "unsubscribe": [Function],
    }
  }
>
  <RealTimeChannel
    name="test"
  >
    <RealTimeEventListener(MyComponent)
      id={45}
      name="Hello World"
    >
      <MyComponent
        id={45}
        name="Hello World"
      >
        <span>
          Test
        </span>
      </MyComponent>
    </RealTimeEventListener(MyComponent)>
  </RealTimeChannel>
</RealTimeProvider>
`;

exports[`<RealTimeProvider /> should handle callback 7`] = `
<RealTimeProvider
  connector={
    Object {
      "subscribe": [Function],
      "unsubscribe": [Function],
    }
  }
>
  <RealTimeChannel
    name="test"
  >
    <RealTimeEventListener(MyComponent)
      id={45}
      name="Hello World"
    >
      <MyComponent
        id={45}
        name="Hello World"
      >
        <span>
          Test
        </span>
      </MyComponent>
    </RealTimeEventListener(MyComponent)>
  </RealTimeChannel>
</RealTimeProvider>
`;

exports[`<RealTimeProvider /> should handle real time event trigger receive new props 1`] = `
<MyComponent
  id={51}
  name="Hello World"
  onClick={[Function]}
/>
`;

exports[`<RealTimeProvider /> should handle receive new props 1`] = `
<MyComponent
  id={51}
  name="Hello World"
/>
`;

exports[`<RealTimeProvider /> should render 1`] = `
<RealTimeProvider
  connector={
    Object {
      "subscribe": [Function],
      "unsubscribe": [Function],
    }
  }
>
  <RealTimeChannel
    name="test"
  >
    <RealTimeEventListener(MyComponent)>
      <MyComponent>
        <span>
          Test
        </span>
      </MyComponent>
    </RealTimeEventListener(MyComponent)>
  </RealTimeChannel>
</RealTimeProvider>
`;
